--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.top-pane{
+  background-color:dimgray;
+}
+.pane{
+  height: 50vh;
+  display:flex;
+}
+.expand-collapse-btn{
+margin-left: .5rem;
+background: none;
+color:white;
+border:none;
+cursor: pointer;
+}
+.editor-container{ 
+flex-grow: 1;
+flex-basis: 0;
+display: flex;
+flex-direction: column;
+padding: .5rem;
+}
+.editor-head{
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
+  color: white;
+  padding: .5rem .5rem .5rem .1rem;
+  border-top-left-radius: .5rem;
+  border-top-right-radius: .5rem;
+}
+.CodeMirror
+{
+  height: 100% !important;
+}
+.editor-container.collapsed{
+  flex-grow: 0;
+}
+.editor-container.collapsed .CodeMirror-scroll{
+  position: absolute;
+  overflow:hidden !important;
+}
+.code-editor{
+  flex-grow: 1;
+  border-bottom-left-radius: .5rem;
+  border-bottom-right-radius: .5rem;
+  overflow:hidden;
 }
